[package]
name = "grobr"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
thiserror = "1.0"
walkdir = "2.5"
pest = "2.7.15"
pest_derive = "2.7.15"
tempfile = "3.14.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
